--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -113,8 +113,11 @@
 .lista-ul--color li > i:first-of-type 
   color: $color-secundario !important
 
-.tarjeta--gris
+.tarjeta--gris.acordion__activo 
   background-color: #F0FCD4 !important
+
+.tarjeta--gris
+  background-color: #F6F6F6 !important
 
 .acordion__accion__btn--a
   background-color: $color-acento-contenido !important
@@ -130,10 +133,7 @@
   line-height: 1em
   color: #12263F !important
 
-.lista-ol--separador li, .lista-ul--separador li 
-  padding-bottom: 15px
-  margin-bottom: 15px
-  border-bottom: solid 0px #b0c0d2
+
 
 .tarjeta--slyder
   background-color: #F2FFFD !important
@@ -160,3 +160,15 @@
 
 .titulo-principal.color-acento-contenido .titulo-principal__numero span 
   color: #12263F
+
+.config-slyder-F
+  background-color: #F6F6F6 !important
+  height: 650px
+
+.slyder-a__bullets__item 
+  width: 15px
+  height: 15px
+  background-color: #E2872C !important
+
+.fas-circulo
+  color: #E2872C !important
