--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -134,7 +134,17 @@
   color: #12263F !important
 
 
+.img-100
+  height: 100% !important
 
+@media (min-width: 1100px)
+  .mt-xl-4 
+    margin-top: 2.5rem!important
+  .w450
+    height: 500px !important    
+@media screen and (min-width: 700px) and (max-width:910px)   
+  .mt-xl-4 
+    margin-top: 4.5rem!important
 .tarjeta--slyder
   background-color: #F2FFFD !important
 
