--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -133,7 +133,8 @@
   line-height: 1em
   color: #12263F !important
 
-
+.fnd-1
+  background-color: #FBEDDF !important
 .img-100
   height: 100% !important
 
