--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -183,3 +183,12 @@
 
 .fas-circulo
   color: #E2872C !important
+
+.fnd-1
+  background: url('../assets/curso/temas/T1/fnd-1.svg')
+  position: relative
+  width: 100%
+  background-size: cover
+  background-position: 0 0
+  background-repeat: no-repeat
+ 
