--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -143,9 +143,14 @@
     margin-top: 2.5rem!important
   .w450
     height: 500px !important    
+  .tsmall
+    font-size: 0.8em
 @media screen and (min-width: 700px) and (max-width:910px)   
   .mt-xl-4 
     margin-top: 4.5rem!important
+@media screen and (min-width: 700px) and (max-width:1099px)      
+  .tsmall
+    font-size: 0.8em
 .tarjeta--slyder
   background-color: #F2FFFD !important
 
